--- a/ubus/api/src/Ubus.App/Ubus.App.csproj
+++ b/ubus/api/src/Ubus.App/Ubus.App.csproj
@@ -4,5 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ubus.Business\Ubus.Business.csproj" />
+    <ProjectReference Include="..\Ubus.Data\Ubus.Data.csproj" />
+  </ItemGroup>
+
 
 </Project>
