--- a/ubus/api/src/Ubus.Business/Ubus.Business.csproj
+++ b/ubus/api/src/Ubus.Business/Ubus.Business.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Enums\" />
-    <Folder Include="Interfaces\" />
+    <Folder Include="Interfaces\Services\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
